# cohash

example/: CMakeLists.txt  key_value_coh_hash.h  key_value_rand_hash.h  test_cu_robin_hood_hash.cu
libh/detail/: hash.inl
libhu/: hash_utils.h
libhu/detail/backend/: hash_utils.inl
tmp/cohash-read-only/example/: .CMakeLists.txt.swn  CMakeLists.txt  Makefile  buildCohashTest.sh  cmake_install.cmake  config_params.h  example_01  fir_opencl.cpp  hashed_image.tga  img_tga.h  img_tga.inl  key_coh_hash.h  key_rand_hash.h  key_value_coh_hash.h  key_value_rand_hash.h  main.cpp  main.cu  mcl_utils.cpp  mcl_utils.h  mt19937ar.h  mt19937ar.inl  runCohashTest.bat  runCohashTest.sh  statsdb.c  statsdb.h  statsdb_dump.py  test_cu_robin_hood_hash.cu  toolchain.cmake
tmp/cohash-read-only/example/os/: pmf_perf_counter.cpp  pmf_perf_counter.h
tmp/cohash-read-only/include/: cublas.h  cudaD3D10.h  cudaD3D11.h  cudaD3D9.h  cudaGL.h  cudaProfiler.h  cuda_gl_interop.h  cuda_profiler_api.h  cufft.h  curand.h  curandDiscrete.h  curand_kernel.h  curand_mrg32k3a.h  curand_mtgp32.h  curand_mtgp32_host.h  curand_mtgp32_kernel.h  cusparse_v2.h  cuviddec.h  fatbinary.h  npp.h  nppcore.h  nppdefs.h  nppi.h  nppi_arithmetic_and_logical_operations.h  nppi_color_conversion.h  nppi_compression_functions.h  nppi_computer_vision.h  nppi_data_exchange_and_initialization.h  nppi_filtering_functions.h  nppi_geometry_transforms.h  nppi_linear_transforms.h  nppi_morphological_operations.h  nppi_statistics_functions.h  nppi_support_functions.h  nppi_threshold_and_compare_operations.h  npps.h  npps_arithmetic_and_logical_operations.h  npps_conversion_functions.h  npps_filtering_functions.h  npps_initialization.h  (+3 more)
tmp/cohash-read-only/include/.svn/: all-wcprops  entries
tmp/cohash-read-only/include/CL/.svn/: all-wcprops  entries
tmp/cohash-read-only/include/FreeOCL/: atomic.h  atomic.h~  config.h
tmp/cohash-read-only/include/FreeOCL/.svn/: all-wcprops  entries
tmp/cohash-read-only/include/thrust/detail/: device_free.inl  device_malloc.inl  device_ptr_traits.h
tmp/cohash-read-only/include/thrust/detail/config/: device_backend.h
tmp/cohash-read-only/include/thrust/detail/device/: no_throw_free.h  reduce.inl  sort.inl
tmp/cohash-read-only/include/thrust/detail/device/cuda/: arch.inl  arch.inl~
tmp/cohash-read-only/include/thrust/detail/device/dispatch/: copy.h  copy.h.bak  copy.h~  for_each.h  free.h  malloc.h  no_throw_free.h~  reduce.h  sort.h  sort.h~
tmp/cohash-read-only/include/thrust/detail/device/opencl/: arch.h  arch.inl.bak  arch.inl~  copy.h  copy_cross_space.h  copy_device_to_device.h  copy_if.h  copy_if.inl  fill.h  fill.inl  for_each.h  for_each.inl  for_each.inl~  free.h  free.inl  launch_closure.h  launch_closure.inl  malloc.h  malloc.inl  malloc.inl~  no_throw_free.h  no_throw_free.inl  no_throw_free.inl~  reduce.h  reduce.inl  sort.inl  synchronize.h  synchronize.inl  synchronize.inl.bak  trivial_copy.h  trivial_copy.inl  trivial_copy.inl.bak
tmp/cohash-read-only/include/thrust/iterator/detail/: backend_iterator_categories.h  backend_iterator_spaces.h  device_iterator_category_to_backend_space.h  device_iterator_category_to_backend_space.h.bak  iterator_facade.inl
tmp/cohash-read-only/include/thrust/system/: cuda_error.h~  opencl_error.h
tmp/cohash-read-only/include/thrust/system/detail/: cuda_error.inl  cuda_error.inl~  opencl_error.inl
tmp/cohash-read-only/libh/detail/: hash.inl
tmp/cohash-read-only/libh/detail/backend/: hash.inl  hash.inl.bak
tmp/cohash-read-only/libh/detail/backend/cpp/detail/: hash.inl
tmp/cohash-read-only/libh/detail/backend/cuda/detail/: hash.inl
tmp/cohash-read-only/libh/detail/backend/omp/: hash.h  hash.inl
tmp/cohash-read-only/libh/detail/backend/omp/detail/: hash.h  hash.inl
tmp/cohash-read-only/libh/detail/backend/opencl/: hash.h  hash.inl
tmp/cohash-read-only/libh/detail/backend/opencl/detail/: hash.h  hash.inl
tmp/cohash-read-only/libhu/: hash_utils.h  hash_utils.h~
tmp/cohash-read-only/libhu/detail/: hash_utils.inl  hash_utils.inl~
tmp/cohash-read-only/libhu/detail/backend/: hash_utils.inl
tmp/cohash-read-only/libhu/detail/backend/cpp/detail/: hash_utils.inl  hash_utils.inl.bak  hash_utils.inl~
tmp/cohash-read-only/libhu/detail/backend/cuda/detail/: hash_utils.inl  hash_utils.inl~
tmp/cohash-read-only/libhu/detail/backend/omp/: hash_utils.h  hash_utils.inl
tmp/cohash-read-only/libhu/detail/backend/opencl/: hash_utils.h  hash_utils.inl
(+9 files in other folders)
